
    HADOOP-9652. Allow RawLocalFs#getFileLinkStatus to fill in the link owner
    and mode if requested. (Andrew Wang via Colin Patrick McCabe)

    HADOOP-10305. Add "rpc.metrics.quantile.enable" and
    "rpc.metrics.percentiles.intervals" to core-default.xml.
    (Akira Ajisaka via wang)

    HADOOP-10317. Rename branch-2.3 release version from 2.4.0-SNAPSHOT
    to 2.3.0-SNAPSHOT. (wang)

  OPTIMIZATIONS

    HADOOP-10142. Avoid groups lookup for unprivileged users such as "dr.who"
    (vinay via cmccabe)

    HADOOP-9748. Reduce blocking on UGI.ensureInitialized (daryn)

    HADOOP-10047. Add a direct-buffer based apis for compression. (Gopal V
    via acmurthy)

    HADOOP-10172. Cache SASL server factories (daryn)

    HADOOP-10173. Remove UGI from DIGEST-MD5 SASL server creation (daryn via
    kihwal)

    HADOOP-10228. FsPermission#fromShort() should cache FsAction.values().
    (Haohui Mai via cnauroth)

  BUG FIXES

    HADOOP-10028. Malformed ssl-server.xml.example. (Haohui Mai via jing9)

    HADOOP-10030. FsShell -put/copyFromLocal should support Windows local path.
    (Chuan Liu via cnauroth)

    HADOOP-10031. FsShell -get/copyToLocal/moveFromLocal should support Windows
    local path. (Chuan Liu via cnauroth)

    HADOOP-10039. Add Hive to the list of projects using 
    AbstractDelegationTokenSecretManager. (Haohui Mai via jing9)

    HADOOP-10040. hadoop.cmd in UNIX format and would not run by default on
    Windows. (cnauroth)

    HADOOP-10055. FileSystemShell.apt.vm doc has typo "numRepicas".
    (Akira Ajisaka via cnauroth)

    HADOOP-10072. TestNfsExports#testMultiMatchers fails due to non-deterministic
    timing around cache expiry check. (cnauroth)

    HADOOP-9898. Set SO_KEEPALIVE on all our sockets. (todd via wang)

    HADOOP-9478. Fix race conditions during the initialization of Configuration
    related to deprecatedKeyMap (cmccabe)

    HADOOP-9660. [WINDOWS] Powershell / cmd parses -Dkey=value from command line